; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ofed/librdmacm/examples/extr_udaddy.c_route_handler.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ofed/librdmacm/examples/extr_udaddy.c_route_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32, i32 }
%struct.cmatest_node = type { i32 }
%struct.rdma_conn_param = type { i32, i32 }

@test = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@.str = private unnamed_addr constant [27 x i8] c"udaddy: failure connecting\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cmatest_node*)* @route_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @route_handler(%struct.cmatest_node* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.cmatest_node*, align 8
  %4 = alloca %struct.rdma_conn_param, align 4
  %5 = alloca i32, align 4
  store %struct.cmatest_node* %0, %struct.cmatest_node** %3, align 8
  %6 = load %struct.cmatest_node*, %struct.cmatest_node** %3, align 8
  %7 = call i32 @verify_test_params(%struct.cmatest_node* %6)
  store i32 %7, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  br label %42

11:                                               ; preds = %1
  %12 = load %struct.cmatest_node*, %struct.cmatest_node** %3, align 8
  %13 = call i32 @init_node(%struct.cmatest_node* %12)
  store i32 %13, i32* %5, align 4
  %14 = load i32, i32* %5, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %11
  br label %42

17:                                               ; preds = %11
  %18 = load %struct.cmatest_node*, %struct.cmatest_node** %3, align 8
  %19 = call i32 @post_recvs(%struct.cmatest_node* %18)
  store i32 %19, i32* %5, align 4
  %20 = load i32, i32* %5, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %17
  br label %42

23:                                               ; preds = %17
  %24 = call i32 @memset(%struct.rdma_conn_param* %4, i32 0, i32 8)
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @test, i32 0, i32 0), align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = getelementptr inbounds %struct.rdma_conn_param, %struct.rdma_conn_param* %4, i32 0, i32 1
  store i32 %27, i32* %28, align 4
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @test, i32 0, i32 0), align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = getelementptr inbounds %struct.rdma_conn_param, %struct.rdma_conn_param* %4, i32 0, i32 0
  store i32 %31, i32* %32, align 4
  %33 = load %struct.cmatest_node*, %struct.cmatest_node** %3, align 8
  %34 = getelementptr inbounds %struct.cmatest_node, %struct.cmatest_node* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = call i32 @rdma_connect(i32 %35, %struct.rdma_conn_param* %4)
  store i32 %36, i32* %5, align 4
  %37 = load i32, i32* %5, align 4
  %38 = icmp ne i32 %37, 0
  br i1 %38, label %39, label %41

39:                                               ; preds = %23
  %40 = call i32 @perror(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  br label %42

41:                                               ; preds = %23
  store i32 0, i32* %2, align 4
  br label %45

42:                                               ; preds = %39, %22, %16, %10
  %43 = call i32 (...) @connect_error()
  %44 = load i32, i32* %5, align 4
  store i32 %44, i32* %2, align 4
  br label %45

45:                                               ; preds = %42, %41
  %46 = load i32, i32* %2, align 4
  ret i32 %46
}

declare dso_local i32 @verify_test_params(%struct.cmatest_node*) #1

declare dso_local i32 @init_node(%struct.cmatest_node*) #1

declare dso_local i32 @post_recvs(%struct.cmatest_node*) #1

declare dso_local i32 @memset(%struct.rdma_conn_param*, i32, i32) #1

declare dso_local i32 @rdma_connect(i32, %struct.rdma_conn_param*) #1

declare dso_local i32 @perror(i8*) #1

declare dso_local i32 @connect_error(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
